--- a/site/index.html
+++ b/site/index.html
@@ -333,6 +333,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://color-palettes.alanwsmith.com">Color Palettes</a></h4>
+<div class="url_display"><a href="https://color-palettes.alanwsmith.com">color-palettes.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>An early attempt at making a color picker. It has a ton of palettes and auto generate styles based on them. Click base palettes in the sidebard. Then shuffle what they apply to with the boxes up top. </p>
+</dd>
+
+<dt>
 <h4><a href="https://color-picker.alanwsmith.com">Color Picker</a></h4>
 <div class="url_display"><a href="https://color-picker.alanwsmith.com">color-picker.alanwsmith.com</a></div>
 </dt>
@@ -434,6 +442,14 @@ Use the template.html file and build process instead.
 </dt>
 <dd>
 <p>An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> using Cloudinary to automatically generate the images</p>
+</dd>
+
+<dt>
+<h4><a href="https://subdomains.alanwsmith.com">How To Grow Your Digital Garden With Subdomains</a></h4>
+<div class="url_display"><a href="https://subdomains.alanwsmith.com">subdomains.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A piece about using subdomains as a clean slate for playing and experimenting. Originally on my main site, it felt like it should have it's own subdomain.</p>
 </dd>
 
 <dt>
@@ -787,6 +803,14 @@ as possible</p>
 </dt>
 <dd>
 <p>Messing around with TailwindCSS to figure out how things work</p>
+</dd>
+
+<dt>
+<h4><a href="https://zoom.alanwsmith.com">Text Zoomer</a></h4>
+<div class="url_display"><a href="https://zoom.alanwsmith.com">zoom.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Mainly a test of bitty-js. Gets you big text if you need it though.</p>
 </dd>
 
 <dt>
