Added itty-js and bitty-js

--- a/site/index.html
+++ b/site/index.html
@@ -301,6 +301,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://bitty-js.alanwsmith.com">bitty-js</a></h4>
+<div class="url_display"><a href="https://bitty-js.alanwsmith.com">bitty-js.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A tiny web component. It makes web pages reactive. Designed for progressive enhancement.</p>
+</dd>
+
+<dt>
 <h4><a href="https://chess.alanwsmith.com/">Blender Chess Pieces</a></h4>
 <div class="url_display"><a href="https://chess.alanwsmith.com/">chess.alanwsmith.com</a></div>
 </dt>
@@ -519,6 +527,14 @@ inspired by
 </dt>
 <dd>
 <p>A collection of ideas for programming projects if you need something to help get you started</p>
+</dd>
+
+<dt>
+<h4><a href="https://itty-js.alanwsmith.com">itty-js</a></h4>
+<div class="url_display"><a href="https://itty-js.alanwsmith.com">itty-js.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A (future) framework built on bitty-js</p>
 </dd>
 
 <dt>
