--- a/site/index.html
+++ b/site/index.html
@@ -736,6 +736,14 @@ This is it</p>
 </dd>
 
 <dt>
+<h4><a href="https://qr-typewriter.alanwsmith.com">QR Code Typewriter</a></h4>
+<div class="url_display"><a href="https://qr-typewriter.alanwsmith.com">qr-typewriter.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A silly little experiment that has no practical purpose other than I thought it might look cool. You be the judge.</p>
+</dd>
+
+<dt>
 <h4><a href="https://reader.alanwsmith.com/">Reader For Docs</a></h4>
 <div class="url_display"><a href="https://reader.alanwsmith.com/">https://reader.alanwsmith.com/</a></div>
 </dt>
