--- a/site/index.html
+++ b/site/index.html
@@ -309,6 +309,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://blank.alanwsmith.com">Blank Page</a></h4>
+<div class="url_display"><a href="https://blank.alanwsmith.com">blank.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A homage to the printed page.</p>
+</dd>
+
+<dt>
 <h4><a href="https://chess.alanwsmith.com/">Blender Chess Pieces</a></h4>
 <div class="url_display"><a href="https://chess.alanwsmith.com/">chess.alanwsmith.com</a></div>
 </dt>
