--- a/site/index.html
+++ b/site/index.html
@@ -568,12 +568,7 @@ both understanding how things work and to use to copy into other code</p>
 </dt>
 <dd>
 <p>You're number one source for links to my letters of the alphabet
-sites. I made them as part of my &quot;<a
-            href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-            >How To Grow Your Digital Garden With Sub-Domains</a
-          >&quot; post. (Here's direct letter access if you're looking for that:
-
-          <a href="https://a.alanwsmith.com/">a</a>,
+sites. I made them as part of my &quot;<a href="https://subdomains.alanwsmith.com/">How To Grow Your Digital Garden With Sub-Domains</a>&quot; post. (Here's direct letter access if you're looking for that: <a href="https://a.alanwsmith.com/">a</a>,
           <a href="https://b.alanwsmith.com/">b</a>,
           <a href="https://c.alanwsmith.com/">c</a>,
           <a href="https://d.alanwsmith.com/">d</a>,
