--- a/site/index.html
+++ b/site/index.html
@@ -341,6 +341,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://commands.alanwsmith.com">CLI Commands</a></h4>
+<div class="url_display"><a href="https://commands.alanwsmith.com">commands.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My collection of scripts and aliases for working on the command line. The most useful of which are probably the git aliases for: status, commit, and push</p>
+</dd>
+
+<dt>
 <h4><a href="https://cloudinary-image-maker.alanwsmith.com/">Cloudinary Image Maker</a></h4>
 <div class="url_display"><a href="https://cloudinary-image-maker.alanwsmith.com/">cloudinary-image-maker.alanwsmith.com</a></div>
 </dt>
