--- a/site/index.html
+++ b/site/index.html
@@ -453,6 +453,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://grid.alanwsmith.com">Grid Web Component</a></h4>
+<div class="url_display"><a href="https://grid.alanwsmith.com">grid.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A web component to make grids that fill up a content area with cells that have minimum and maximum widths and a given aspect ratio</p>
+</dd>
+
+<dt>
 <h4><a href="https://hacking.alanwsmith.com/">Hacking</a></h4>
 <div class="url_display"><a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a></div>
 </dt>
