updated bitty url

--- a/site/index.html
+++ b/site/index.html
@@ -301,11 +301,11 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
-<h4><a href="https://bitty-js.alanwsmith.com">bitty-js</a></h4>
-<div class="url_display"><a href="https://bitty-js.alanwsmith.com">bitty-js.alanwsmith.com</a></div>
+<h4><a href="https://bitty.alanwsmith.com">bitty web component</a></h4>
+<div class="url_display"><a href="https://bitty.alanwsmith.com">bitty.alanwsmith.com</a></div>
 </dt>
 <dd>
-<p>A tiny web component. It makes web pages reactive. Designed for progressive enhancement.</p>
+<p>A tiny web component. It uses signals to make web pages reactive. Designed for progressive enhancement.</p>
 </dd>
 
 <dt>
