added alice site

--- a/site/index.html
+++ b/site/index.html
@@ -269,6 +269,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://alice.alanwsmith.com">Alice's CSS Adventures in Wonderland</a></h4>
+<div class="url_display"><a href="https://alice.alanwsmith.com">alice.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>An experiment in CSS where every letter of the alphabet gets its own style. Their colors and shapes change as you're reading the text.</p>
+</dd>
+
+<dt>
 <h4><a href="https://working.alanwsmith.com/">All Work And No Play</a></h4>
 <div class="url_display"><a href="https://working.alanwsmith.com/">working.alanwsmith.com</a></div>
 </dt>
