--- a/site/index.html
+++ b/site/index.html
@@ -724,6 +724,14 @@ every time. Another plain HTML file site that I'll be adding some
 </dd>
 
 <dt>
+<h4><a href="https://neovim-menu.alanwsmith.com">Neovim Menu</a></h4>
+<div class="url_display"><a href="https://neovim-menu.alanwsmith.com">neovim-menu.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A custom plugin I'm building to give me easy access to various task runners and external processes.</p>
+</dd>
+
+<dt>
 <h4><a href="https://nextjs-playground.alanwsmith.com/">Next.js Playground</a></h4>
 <div class="url_display"><a href="https://nextjs-playground.alanwsmith.com/">nextjs-playground.alanwsmith.com</a></div>
 </dt>
