--- a/site/index.html
+++ b/site/index.html
@@ -865,6 +865,14 @@ as possible</p>
 </dd>
 
 <dt>
+<h4><a href="https://svg-scrubber.alanwsmith.com">SVG Scrubber</a></h4>
+<div class="url_display"><a href="https://svg-scrubber.alanwsmith.com">svg-scrubber.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A little app I wrote to clean up SVGs from the Concepts iPad app and give them light/dark mode. After building it, I discovered I didn't like the look and the app does all the formatting I need. Oh, well. Still fun to build.</p>
+</dd>
+
+<dt>
 <h4><a href="https://tailwind-playground.alanwsmith.com/">Tailwind Playground</a></h4>
 <div class="url_display"><a href="https://tailwind-playground.alanwsmith.com/">tailwind-playground.alanwsmith.com</a></div>
 </dt>
