added popup launcher

--- a/site/index.html
+++ b/site/index.html
@@ -770,6 +770,14 @@ health, movies, and music</p>
 </dd>
 
 <dt>
+<h4><a href="https://popup.alanwsmith.com">Popup Launcher</a></h4>
+<div class="url_display"><a href="https://popup.alanwsmith.com">popup.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Drop in a URL and it'll launch it into a new popup window. Useful for times when you need a browser page to be smaller than browsers go by default.</p>
+</dd>
+
+<dt>
 <h4><a href="https://qrclock.alanwsmith.com/">QR Code Clock</a></h4>
 <div class="url_display"><a href="https://qrclock.alanwsmith.com/">qrclock.alanwsmith.com</a></div>
 </dt>
