--- a/site/index.html
+++ b/site/index.html
@@ -437,6 +437,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://flex.alanwsmith.com">Flexbox Notes</a></h4>
+<div class="url_display"><a href="https://flex.alanwsmith.com">flex.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My notes on how flexbox works in CSS</p>
+</dd>
+
+<dt>
 <h4><a href="https://fonts-and-colors.alanwsmith.com/">Fonts and Colors</a></h4>
 <div class="url_display"><a href="https://fonts-and-colors.alanwsmith.com/">fonts-and-colors.alanwsmith.com</a></div>
 </dt>
