added adblock site

--- a/site/index.html
+++ b/site/index.html
@@ -253,6 +253,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://adblock.alanwsmith.com">Ad Blocking /etc/hosts file</a></h4>
+<div class="url_display"><a href="https://adblock.alanwsmith.com">adblock.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A combination of 60+ other ad blocking files</p>
+</dd>
+
+<dt>
 <h4><a href="https://ai-honeypot.alanwsmith.com">AI Honeypot Builder</a></h4>
 <div class="url_display"><a href="https://ai-honeypot.alanwsmith.com">ai-honeypot.alanwsmith.com</a></div>
 </dt>
