added texture background maker

--- a/site/index.html
+++ b/site/index.html
@@ -317,6 +317,14 @@ Use the template.html file and build process instead.
 </dd>
 
 <dt>
+<h4><a href="https://texture.alanwsmith.com">Background Texture Maker</a></h4>
+<div class="url_display"><a href="https://texture.alanwsmith.com">texture.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A little tool to make SVGs to add texture to your site backgrounds.</p>
+</dd>
+
+<dt>
 <h4><a href="https://bitty.alanwsmith.com">bitty web component</a></h4>
 <div class="url_display"><a href="https://bitty.alanwsmith.com">bitty.alanwsmith.com</a></div>
 </dt>
