added weird web october

--- a/site/index.html
+++ b/site/index.html
@@ -971,6 +971,14 @@ my brain works</p>
 </dd>
 
 <dt>
+<h4><a href="https://wwo-2025-0.alanwsmith.com/">Weird Web October - 2025</a></h4>
+<div class="url_display"><a href="https://wwo-2025-0.alanwsmith.com/">wwo-2025-0.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>My run at Weird Web October 2025 Edition. I made it 18 days. It was a great test run for bitty, but after 18 days I knew enough about what I wanted to do next and didn't want to wait any more to do the work. </p>
+</dd>
+
+<dt>
 <h4><a href="https://yabai.alanwsmith.com/">Yabai Automation</a></h4>
 <div class="url_display"><a href="https://yabai.alanwsmith.com/">yabai.alanwsmith.com</a></div>
 </dt>
